--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -1,11 +1,47 @@
-.features {
-  display: flex;
-  align-items: center;
-  padding: 2rem 0;
+.featureSection {
+  background-color: rgba(0, 0, 0, 0.05);
+  padding-top: 1rem;
+}
+
+.sectionTitle {
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+  width: 100%;
+  margin-top: 2rem;
+}
+
+.sectionSubTitle {
+  text-align: center;
   width: 100%;
 }
 
+.featureWrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 2rem 10px 2rem 10px;
+}
+
+.featureItem {
+  margin: 0 10px;
+  padding: 1rem 0;
+  width: calc((100% - 80px) / 3);
+}
+.featureItem:hover {
+  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  background-color: rgba(125, 125, 125, 0.01);
+}
+
 .featureSvg {
-  height: 200px;
-  width: 200px;
+  height: 4rem;
+  width: 4rem;
+  margin-bottom: 0.5rem;
+}
+
+.featureItemText {
+  padding: 0 3rem;
+  text-align: center;
 }
