--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,9 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+/* 全局图片样式 */
+p > img {
+  box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
