--- a/src/components/HomepageBrands/styles.module.css
+++ b/src/components/HomepageBrands/styles.module.css
@@ -37,4 +37,16 @@
   transform-origin: 50% 50%;
 }
 
+@media screen and (max-width: 960px) {
+  .providerImg {
+    width: calc((100% - 50px) / 6);
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .providerImg {
+    width: calc((100% - 40px) / 5);
+  }
+}
+
 
