--- a/src/components/CloudFeatureSupport/styles.module.css
+++ b/src/components/CloudFeatureSupport/styles.module.css
@@ -3,7 +3,7 @@
 }
 
 table tr th, table tr td  { border-left: 1px solid #dee2e6 }
-table { border-collapse: collapse; table-layout:fixed; width:100%; height: 700px; }
+table { border-collapse: collapse; table-layout:fixed; width:100%; max-height: 700px; }
 .fixed-row-1 { position:sticky; top: 0; background-color: #FFFFFF; z-index: 2 }
 .fixed-row-2 { position:sticky; top: 48px; background-color: #fff; z-index: 2 }
 .fixed-col-1 { position:sticky; left: 0; background-color: #FFFFFF; z-index: 1 }
