首页样式调整

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -148,6 +148,17 @@ p > img {
 .sidebar-doc-type-icon {
   font-size: 18px;
   line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+}
+
+.sidebar-doc-type-icon img {
+  width: 20px;
+  height: 20px;
+  filter: brightness(0) invert(1);
+  opacity: 1;
 }
 
 .sidebar-doc-type-label {
