--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -11,9 +11,53 @@
   display: block;
 }
 
+.heroContent {
+  width: 100%;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.heroTitleRow {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  margin-bottom: 0.5rem;
+  width: 100%;
+}
+
+.heroTitleRow .hero__title {
+  flex: 0 1 auto;
+  margin: 0;
+}
+
 .heroImg {
-  width: 400px;
-  height: 400px;
+  width: 60px;
+  height: 60px;
+  flex-shrink: 0;
+  opacity: 0.85;
+  margin-left: auto;
+}
+
+@media screen and (max-width: 996px) {
+  .heroBanner {
+    padding: 2rem;
+  }
+
+  .heroTitleRow {
+    gap: 0.75rem;
+  }
+
+  .heroImg {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .heroImg {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 .alignCenter {
@@ -21,18 +65,15 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: auto;
-}
-
-@media screen and (max-width: 996px) {
-  .heroBanner {
-    padding: 2rem;
-  }
+  text-align: left;
 }
 
 .buttons {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 1rem;
+  flex-wrap: wrap;
 }
 
 .buttonsDark {
@@ -40,4 +81,16 @@
   align-items: center;
   justify-content: center;
   color: black;
+}
+
+@media screen and (max-width: 768px) {
+  .buttons {
+    flex-direction: column;
+    gap: 0.75rem;
+  }
+
+  .buttons .button {
+    width: 100%;
+    max-width: 300px;
+  }
 }
