--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -4,7 +4,7 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
+  padding: 1.5rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
@@ -14,49 +14,120 @@
 .heroContent {
   width: 100%;
   margin: 0 auto;
-  text-align: left;
+  text-align: center;
+  max-width: 900px;
 }
 
 .heroTitleRow {
   display: flex;
   align-items: center;
-  gap: 2rem;
-  margin-bottom: 0.5rem;
+  justify-content: center;
+  gap: 0.875rem;
+  margin-bottom: 0;
   width: 100%;
 }
 
 .heroTitleRow .hero__title {
   flex: 0 1 auto;
   margin: 0;
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: 1.05;
 }
 
 .heroImg {
-  width: 60px;
-  height: 60px;
+  width: 52px;
+  height: 52px;
   flex-shrink: 0;
+  opacity: 0.9;
+  margin-left: 0;
+  transition: transform 0.3s ease;
+}
+
+.heroImg:hover {
+  transform: scale(1.05);
+}
+
+.hero__subtitle {
+  font-size: 2.5rem;
+  line-height: 1.25;
+  margin: 0 0 0.125rem 0;
   opacity: 0.85;
-  margin-left: auto;
+  font-weight: 500;
+}
+
+.heroTagline {
+  font-size: 1.5rem;
+  line-height: 1.35;
+  margin: 0.125rem 0 0 0;
+  opacity: 0.75;
+  font-weight: 400;
 }
 
 @media screen and (max-width: 996px) {
   .heroBanner {
-    padding: 2rem;
+    padding: 1.25rem 1.5rem;
   }
 
   .heroTitleRow {
-    gap: 0.75rem;
+    gap: 0.625rem;
+    margin-bottom: 0;
+  }
+
+  .heroTitleRow .hero__title {
+    font-size: 4rem;
+    line-height: 1.05;
   }
 
   .heroImg {
-    width: 50px;
-    height: 50px;
+    width: 44px;
+    height: 44px;
+  }
+
+  .hero__subtitle {
+    font-size: 1.5rem;
+    line-height: 1.25;
+    margin: 0 0 0.125rem 0;
+  }
+
+  .heroTagline {
+    font-size: 1.15rem;
+    line-height: 1.35;
+    margin: 0.125rem 0 0 0;
   }
 }
 
 @media screen and (max-width: 768px) {
+  .heroBanner {
+    padding: 1rem 1rem;
+  }
+
+  .heroTitleRow {
+    gap: 0.5rem;
+    flex-wrap: wrap;
+    margin-bottom: 0;
+  }
+
+  .heroTitleRow .hero__title {
+    font-size: 2.5rem;
+    line-height: 1.05;
+  }
+
   .heroImg {
     width: 40px;
     height: 40px;
+  }
+
+  .hero__subtitle {
+    font-size: 1.35rem;
+    line-height: 1.25;
+    margin: 0 0 0.125rem 0;
+  }
+
+  .heroTagline {
+    font-size: 1rem;
+    line-height: 1.35;
+    margin: 0.125rem 0 0 0;
   }
 }
 
