--- a/src/components/ProductCards/styles.module.css
+++ b/src/components/ProductCards/styles.module.css
@@ -7,12 +7,12 @@
 }
 
 .productCardsTitle {
-  font-size: 1.5rem;
-  font-weight: 600;
+  font-size: 2rem;
+  font-weight: bold;
   text-align: center;
+  width: 100%;
+  margin-top: 0.5rem;
   margin-bottom: 0.5rem;
-  color: var(--ifm-heading-color);
-  line-height: 1.3;
 }
 
 .productCardsSubtitle {
